ft_containers-unit-test/logs.txt
In file included from ../map_tests/operator >=.cpp:2:
../map_tests/__service.ipp:3:10: error: expected "FILENAME" or <FILENAME>
#include MAP
         ^
../map_tests/__service.ipp:19:14: error: no template named '_map'; did you mean 'map'?
void fillMap(_map<T, V, C> &mp) {
             ^~~~
             map
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/map:899:28: note: 'map' declared here
class _LIBCPP_TEMPLATE_VIS map
                           ^
In file included from ../map_tests/operator >=.cpp:2:
../map_tests/__service.ipp:19:6: error: redefinition of 'fillMap'
void fillMap(_map<T, V, C> &mp) {
     ^
../map_tests/__service.ipp:6:6: note: previous definition is here
void fillMap(std::map<T, V, C> &mp) {
     ^
../map_tests/__service.ipp:20:12: error: use of undeclared identifier '_make_pair'; did you mean 'make_pair'?
        mp.insert(_make_pair(16, 3));
                  ^~~~~~~~~~
                  make_pair
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/utility:679:1: note: 'make_pair' declared here
make_pair(_T1 __x, _T2 __y)
^
In file included from ../map_tests/operator >=.cpp:2:
../map_tests/__service.ipp:21:12: error: use of undeclared identifier '_make_pair'; did you mean 'make_pair'?
        mp.insert(_make_pair(8, 3));
                  ^~~~~~~~~~
                  make_pair
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/utility:679:1: note: 'make_pair' declared here
make_pair(_T1 __x, _T2 __y)
^
In file included from ../map_tests/operator >=.cpp:2:
../map_tests/__service.ipp:22:12: error: use of undeclared identifier '_make_pair'; did you mean 'make_pair'?
        mp.insert(_make_pair(23, 3));
                  ^~~~~~~~~~
                  make_pair
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/utility:679:1: note: 'make_pair' declared here
make_pair(_T1 __x, _T2 __y)
^
In file included from ../map_tests/operator >=.cpp:2:
../map_tests/__service.ipp:23:12: error: use of undeclared identifier '_make_pair'; did you mean 'make_pair'?
        mp.insert(_make_pair(7, 3));
                  ^~~~~~~~~~
                  make_pair
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/utility:679:1: note: 'make_pair' declared here
make_pair(_T1 __x, _T2 __y)
^
In file included from ../map_tests/operator >=.cpp:2:
../map_tests/__service.ipp:24:12: error: use of undeclared identifier '_make_pair'; did you mean 'make_pair'?
        mp.insert(_make_pair(19, 3));
                  ^~~~~~~~~~
                  make_pair
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/utility:679:1: note: 'make_pair' declared here
make_pair(_T1 __x, _T2 __y)
^
In file included from ../map_tests/operator >=.cpp:2:
../map_tests/__service.ipp:25:12: error: use of undeclared identifier '_make_pair'; did you mean 'make_pair'?
        mp.insert(_make_pair(29, 3));
                  ^~~~~~~~~~
                  make_pair
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/utility:679:1: note: 'make_pair' declared here
make_pair(_T1 __x, _T2 __y)
^
In file included from ../map_tests/operator >=.cpp:2:
../map_tests/__service.ipp:26:12: error: use of undeclared identifier '_make_pair'; did you mean 'make_pair'?
        mp.insert(_make_pair(41, 3));
                  ^~~~~~~~~~
                  make_pair
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/utility:679:1: note: 'make_pair' declared here
make_pair(_T1 __x, _T2 __y)
^
In file included from ../map_tests/operator >=.cpp:2:
../map_tests/__service.ipp:27:12: error: use of undeclared identifier '_make_pair'; did you mean 'make_pair'?
        mp.insert(_make_pair(4, 3));
                  ^~~~~~~~~~
                  make_pair
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/utility:679:1: note: 'make_pair' declared here
make_pair(_T1 __x, _T2 __y)
^
In file included from ../map_tests/operator >=.cpp:2:
../map_tests/__service.ipp:28:12: error: use of undeclared identifier '_make_pair'; did you mean 'make_pair'?
        mp.insert(_make_pair(11, 3));
                  ^~~~~~~~~~
                  make_pair
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/utility:679:1: note: 'make_pair' declared here
make_pair(_T1 __x, _T2 __y)
^
In file included from ../map_tests/operator >=.cpp:2:
../map_tests/__service.ipp:35:2: error: no template named '_map'; did you mean 'map'?
        _map<int, int> mp1, mp2, mp3, mp4;
        ^~~~
        map
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/map:957:43: note: 'map' declared here
        friend class _LIBCPP_TEMPLATE_VIS map;
                                          ^
In file included from ../map_tests/operator >=.cpp:2:
../map_tests/__service.ipp:36:2: error: no template named '_map'; did you mean 'map'?
        _map<string, string> mp5, mp6, mp7, mp8, mp9;
        ^~~~
        map
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/map:957:43: note: 'map' declared here
        friend class _LIBCPP_TEMPLATE_VIS map;
                                          ^
In file included from ../map_tests/operator >=.cpp:2:
../map_tests/__service.ipp:39:47: error: use of undeclared identifier 'ft'
                m1.insert(std::make_pair(2, 3)); mp1.insert(ft::make_pair(2, 3));
                                                            ^
../map_tests/__service.ipp:40:47: error: use of undeclared identifier 'ft'
                m2.insert(std::make_pair(3, 3)); mp2.insert(ft::make_pair(3, 3));
                                                            ^
../map_tests/__service.ipp:41:47: error: use of undeclared identifier 'ft'
                m3.insert(std::make_pair(3, 4)); mp3.insert(ft::make_pair(3, 4));
                                                            ^
../map_tests/__service.ipp:42:47: error: use of undeclared identifier 'ft'
                m4.insert(std::make_pair(4, 4)); mp4.insert(ft::make_pair(4, 4));
                                                            ^
../map_tests/__service.ipp:43:47: error: use of undeclared identifier 'ft'
                m4.insert(std::make_pair(4, 5)); mp4.insert(ft::make_pair(4, 5));
                                                            ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
 stopping now [-ferror-limit=]
20 errors generated.
it=]
20 errors generated.
